# chunk-reader-tg-bot

./: .env_sample  .gitignore  Dockerfile  README.md  database.ini_sample  docker-compose.yml  init-mongo.js  mongo-init.js  pyproject.toml  requirements.txt
src/: .env_sample  Book.py  ChatClient.py  Client.py  DBManager.py  Database.py  EpubManager.py  PdfManager.py  config.py  database.py  filename.buffer  main.py  requirements.txt
